@@ -2043,13 +2043,17 @@ solr.dbfile = ${dspace.dir}/config/GeoLiteCity.dat
 # useProxies = true
 
 # Control if the statistics pages should be only shown to authorized users
+# If enabled, only the administrators for the DSpaceObject will be able to
+# view the statistics.
+# If disabled, anyone with READ permissions on the DSpaceObject will be able
+# to view the statistics.
 statistics.item.authorization.admin=true
 
 # control solr statistics querying to filter out spider IPs
 # false by default
 # solr.statistics.query.filter.spiderIp = false
 
-# control slor statistics querying to look at "isBot" field to determine
+# control solr statistics querying to look at "isBot" field to determine
 # if record is a bot. true by default.
 # solr.statistics.query.filter.isBot = true
 
